--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==2.0.12
 cryptography==37.0.2
 h11==0.13.0
 idna==3.3
+lxml==4.9.0
 outcome==1.1.0
 pycparser==2.21
 pyOpenSSL==22.0.0
